Fix for template columns and grouping view. Change the expand/collapse from a sprite because the distance between them is not enough.
git-svn-id: http://code.extjs.com/svn/ext/trunk@4446 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/grid.css
+++ b/resources/css/structure/grid.css
@@ -507,13 +507,9 @@ a.x-grid3-hd-btn:hover {
     padding-top:6px;
 }
 
-.x-grid-group-hd div {
-    background:transparent no-repeat 3px -47px;
+.x-grid-group-hd div.x-grid-group-title {
+    background:transparent no-repeat 3px 3px;
     padding:4px 4px 4px 17px;
-}
-
-.x-grid-group-collapsed .x-grid-group-hd div {
-    background-position: 3px 3px;
 }
 
 .x-grid-group-collapsed .x-grid-group-body {
